--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://danielgsanz.github.io/'
 languageCode = 'es-ES'
-title = 'My New Site'
+title = 'Daniel Gómez Sanz'
 theme = 'LoveIt'
